--- a/index.html
+++ b/index.html
@@ -11,8 +11,18 @@
 
 <body class="debug">
 
-    <header></header>
-    <main></main>
+    <header>
+        <div class="header-container">
+            <div>log in</div>
+            <div><a>link link link link</a></div>
+            <div>log</div>
+        </div>
+    </header>
+    <main>
+        <div class="jumbotron-container">
+            <div></div>
+        </div>
+    </main>
     <footer></footer>
 
 </body>
