--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body class="debug">
 
     <header>
+        <!--header-->
         <div class="header-container">
             <div>log in</div>
             <div><a>link link link link</a></div>
@@ -19,9 +20,11 @@
         </div>
     </header>
     <main>
+        <!--jumbotron-->
         <div class="jumbotron-container">
-            <div></div>
+            <div id="jumbo-content"></div>
         </div>
+
     </main>
     <footer></footer>
 
