Invite only done.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
         <div class="jumbotron-container">
             <div id="jumbo-content"></div>
         </div>
+        <!--invite only section-->
+        <div class="invite_only">
+            <div class="img_container">photo</div>
+            <div class="txt_container">txt</div>
+
+        </div>
 
     </main>
     <footer></footer>
