Community&fandom done.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,17 @@
             <div class="txt_container">txt</div>
 
         </div>
+        <!--community section-->
+        <div class="community-container">
+            <div class="txt_container">txt</div>
+            <div class="img_container">photo</div>
+        </div>
 
+        <!--invite only section-->
+        <div class="fandom">
+            <div class="img_container">photo</div>
+            <div class="txt_container">txt</div>
+        </div>
     </main>
     <footer></footer>
 
