--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
             <div class="img_container">photo</div>
             <div class="txt_container">txt</div>
         </div>
+        <!--technology-->
+        <div class="technology_container">
+            <div></div>
+        </div>
     </main>
     <footer></footer>
 
