Footer finished. standing by for feedback.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,22 @@
             <div></div>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <!--container for columns-->
+        <div class="Footer_container">
+            <div class="special_footer"></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <!--container for logo and log in-->
+        <div class="bottom_container">
+            <div id="line">
+                <div>logo</div>
+                <div>button</div>
+            </div>
+    </footer>
 
 </body>
 
